--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+aiohttp==3.9.5
+aiosignal==1.3.1
 asgiref==3.8.1
+async-timeout==4.0.3
+attrs==23.2.0
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
@@ -9,7 +13,9 @@ django-templated-mail==1.1.1
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
 djoser==2.2.2
+frozenlist==1.4.1
 idna==3.7
+multidict==6.0.5
 oauthlib==3.2.2
 pycparser==2.22
 PyJWT==2.8.0
@@ -21,3 +27,4 @@ social-auth-core==4.5.3
 sqlparse==0.5.0
 typing_extensions==4.11.0
 urllib3==2.2.1
+yarl==1.9.4
