--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
 aiohttp==3.9.5
 aiosignal==1.3.1
+amqp==5.2.0
 asgiref==3.8.1
 async-timeout==4.0.3
 attrs==23.2.0
+billiard==4.2.0
+celery==5.4.0
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 cryptography==42.0.5
 defusedxml==0.8.0rc2
 Django==5.0.4
@@ -13,18 +20,32 @@ django-templated-mail==1.1.1
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
 djoser==2.2.2
+drf-yasg==1.21.7
 frozenlist==1.4.1
 idna==3.7
+inflection==0.5.1
+kombu==5.3.7
 multidict==6.0.5
 oauthlib==3.2.2
+packaging==24.0
+prompt-toolkit==3.0.43
 pycparser==2.22
 PyJWT==2.8.0
+python-dateutil==2.9.0.post0
 python3-openid==3.2.0
+pytz==2024.1
+PyYAML==6.0.1
+redis==5.0.3
 requests==2.31.0
 requests-oauthlib==2.0.0
+six==1.16.0
 social-auth-app-django==5.4.0
 social-auth-core==4.5.3
 sqlparse==0.5.0
 typing_extensions==4.11.0
+tzdata==2024.1
+uritemplate==4.1.1
 urllib3==2.2.1
+vine==5.1.0
+wcwidth==0.2.13
 yarl==1.9.4
